--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/github-slugger": "^1.3.0",
+    "github-slugger": "^2.0.0",
     "glob": "^11.0.3",
     "lucide-react": "^0.540.0",
     "next": "15.4.6",
@@ -27,9 +29,13 @@
     "@types/cookie": "^0.6.0",
     "@types/cors": "^2.8.19",
     "@types/glob": "^8.1.0",
+    "@types/lodash": "^4.17.20",
+    "@types/lodash.clonedeep": "^4.5.9",
     "@types/node": "^20",
+    "@types/node-fetch": "^2.6.13",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/triple-beam": "^1.3.5",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
     "tailwindcss": "^4",
